# coffee-nir-quality

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: RawSpectra_RoastedCoffee.xlsx  SensoryQuality_RoastedCoffee.xlsx
docs/: 00_pipeline_geral.md  01_divisao_dados.md  02_preprocessamento.md  03_otimizacao.md  04_grid_search.md
docs/fluxogramas/: 00_pipeline_geral.md  01_divisao_dados.md  02_preprocessamento.md  03_visualizacao_espectros.md  04_grid_search.md  05_validacao_final.md
recipes/: 6.yaml  7.yaml  random_forest_grid_search.yaml  tcc.yaml
resultados_tcc/rep_01/: lasso_features_processed_SG_1D+MeanCentering.xlsx  lasso_features_raw.xlsx  resultados_bayesian_search_treinamento.csv  resultados_validacao_final.csv
resultados_tcc/rep_02/: lasso_features_processed_SG_1D+MeanCentering.xlsx  lasso_features_raw.xlsx  resultados_bayesian_search_treinamento.csv  resultados_validacao_final.csv
resultados_tcc/rep_03/: lasso_features_processed_SG_1D+MeanCentering.xlsx  lasso_features_raw.xlsx  resultados_bayesian_search_treinamento.csv  resultados_validacao_final.csv
resultados_tcc/rep_04/: lasso_features_processed_SG_1D+MeanCentering.xlsx  lasso_features_raw.xlsx  resultados_bayesian_search_treinamento.csv  resultados_validacao_final.csv
resultados_tcc/rep_05/: lasso_features_processed_SG_1D+MeanCentering.xlsx  lasso_features_raw.xlsx  resultados_bayesian_search_treinamento.csv  (+1 more)
scripts/: filter_results.py  plot.py  run_bayesian_search.py  run_grid_search.py  run_preprocessing.py  run_split.py  run_validation.py
src/: config.py
(+11 files in other folders)
